@@ -1,4 +1,7 @@
 
+2009-04-02 14:14 Ali aliov@xfce.org 
+	 * : Added on battery DBus signal+Fix brightness settings on battery power
+
 2009-04-02 10:46 Ali aliov@xfce.org 
 	 * : Fix a Glade warnings
 
